--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 </div>
 <footer class="mx-3 p-2 name">
   <div class="col-12 block-inline p-2 text-center justify-content-center align-items-center">
-      <a href="ImranZafar_CV.pdf" class="btn" role="button" data-bs-toggle="button">My CV (PDF)</a>
+      <a href="ImranZafar_CV.pdf" download="ImranZafar_CV.pdf" class="btn" role="button" data-bs-toggle="button">My CV (PDF)</a>
   </div>
 </footer>
 
