fixed colour issue

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button class="btn col-4" type="button" data-bs-toggle="collapse" data-bs-target="#1" aria-expanded="false" aria-controls="1">
               My Skills (click me!) </button>
               <div class="collapse collapse-horizontal block-inline" id="1">
-              <div class="card card-body" style="width: 300px;">
+              <div class="card card-body name" style="width: 300px;">
                 This will display examples of how i've developed these skills.
               </div>
             </div>
@@ -55,17 +55,17 @@
             <button class="btn col-4" type="button" data-bs-toggle="collapse" data-bs-target="#2" aria-expanded="false" aria-controls="2">
               Problem Solving</button>
               <div class="collapse collapse-horizontal block-inline" id="2">
-              <div class="card card-body" style="width: 300px;">
+              <div class="card card-body name" style="width: 300px;">
                 Tested different versions of solutions to solve issues in programs to ensure they ran as designed
               </div>
             </div>
           </div></li>
-        <li class="list-group-item cardback">
+        <li class="list-group-item cardback ">
           <div class=" d-flex justify-content-center">
             <button class="btn col-4" type="button" data-bs-toggle="collapse" data-bs-target="#3" aria-expanded="false" aria-controls="3">
               Teamwork</button>
               <div class="collapse collapse-horizontal block-inline" id="3">
-              <div class="card card-body" style="width: 300px;">
+              <div class="card card-body name" style="width: 300px;">
                   Created a Social Media Network in Java using Swing as part of a team project. Tasks were
                   divided between us, my part focusing on implementing the Data Structures and File Handling. I discussed
                   with teammates to find the most optimal solutions to ensure our program was efficient for all tasks.
@@ -78,7 +78,7 @@
             <button class="btn col-4" type="button" data-bs-toggle="collapse" data-bs-target="#4" aria-expanded="false" aria-controls="4">
               Time Management</button>
               <div class="collapse collapse-horizontal block-inline" id="4">
-              <div class="card card-body" style="width: 300px;">
+              <div class="card card-body name" style="width: 300px;">
                 Often work with deadlines and ensured work was scheduled to have tasks completed with time to test and to improve the work.
               </div>
             </div>
@@ -89,7 +89,7 @@
             <button class="btn col-4" type="button" data-bs-toggle="collapse" data-bs-target="#5" aria-expanded="false" aria-controls="5">
               Communication</button>
               <div class="collapse collapse-horizontal block-inline" id="5">
-              <div class="card card-body" style="width: 300px;">
+              <div class="card card-body name" style="width: 300px;">
                 Discussed with peers on team projects to divide tasks and produce efficient results.
               </div>
             </div>
